# Machine-Learning-Project-for-ETH-AI-Center

./: .gitignore  .pre-commit-config.yaml  CliffWalking.py  README.md  environment.yml  gridWorld.py  interface.py  pyproject.toml
lightning_logs/experiment1_pretrained_linear/: events.out.tfevents.1685551276.LAPTOP-HVESHD70.199492.0
lightning_logs/experiment1_pretrained_square/: events.out.tfevents.1685543693.LAPTOP-HVESHD70.187138.0
lightning_logs/ml_multi_obs_b1/: events.out.tfevents.1685385043.JP.283952.0
lightning_logs/mlp_final/: events.out.tfevents.1685598369.JP.202357.0
lightning_logs/mlp_finetune/: events.out.tfevents.1685597524.JP.194298.0
lightning_logs/mlp_multi_obs_b4/: events.out.tfevents.1685383918.JP.267664.0
lightning_logs/mlp_single_obs_b4/: events.out.tfevents.1685372438.JP.188173.0
lightning_logs/ppo_pretrain/: events.out.tfevents.1685596323.JP.185753.0
lightning_logs/ppo_sde_pretrain/: events.out.tfevents.1685595477.JP.174356.0
lightning_logs/rnn_final/: events.out.tfevents.1685598998.JP.3685.0
lightning_logs/rnn_new_b1/: events.out.tfevents.1685455099.JP.44726.0
lightning_logs/rnn_single_traj_b1/: events.out.tfevents.1685384367.JP.273908.0
lightning_logs/rnn_single_traj_b4/: events.out.tfevents.1685372270.JP.183237.0
lightning_logs/sac_pretrain/: events.out.tfevents.1685595089.JP.169037.0
lightning_logs/sac_sde_pretrain/: events.out.tfevents.1685594640.JP.163262.0
lightning_logs/version_0/: events.out.tfevents.1685133658.JP  events.out.tfevents.1685195069.JP.8749.0  events.out.tfevents.1685516110.NBYB001.18025.0
lightning_logs/version_1/: events.out.tfevents.1685517051.NBYB001.18025.1
lightning_logs/version_2/: events.out.tfevents.1685517296.NBYB001.22695.0
lightning_logs/version_3/: events.out.tfevents.1685519041.NBYB001.26269.0
lightning_logs/version_4/: events.out.tfevents.1685601395.JP.17537.0
ml_project/: CliffWalking.py  __init__.py  gridWorld.py  types.py  web_interface.py
ml_project/experiments/: experiment1.py
ml_project/reward_model/: __init__.py  best_reward_model_state.pth  create_preference_dataset.py  datasets.py  finetune_reward_model.py  hyperparameter_search.py  network.py  networks.py  networks_old.py  preference_dataset.pkl  pretrain_reward_model.py  train_naive_reward_model.py  train_reward_model.py  train_reward_model_dataLoader.py  train_reward_model_gian.py  train_reward_model_validation.py
ml_project/rl/: __init__.py  generate_reward_data.py  generate_videos_and_data.py  generate_videos_and_transitions.py  main.py  render.py  train_rl_agent.py
ml_project/rl/agents/: ddpg.py  ppo.py  (+1 more)
ml_project/static/: interface.css  interface.html  interface.js
rl_logs/ppo_HalfCheetah-v3_0/: events.out.tfevents.1685586021.JP.99924.0  events.out.tfevents.1685586038.JP.99924.1  events.out.tfevents.1685586054.JP.99924.2  events.out.tfevents.1685586070.JP.99924.3  events.out.tfevents.1685586087.JP.99924.4  events.out.tfevents.1685586105.JP.99924.5  events.out.tfevents.1685586123.JP.99924.6  events.out.tfevents.1685586140.JP.99924.7  events.out.tfevents.1685586157.JP.99924.8  events.out.tfevents.1685586174.JP.99924.9  events.out.tfevents.1685586192.JP.99924.10  events.out.tfevents.1685586208.JP.99924.11  events.out.tfevents.1685586225.JP.99924.12  events.out.tfevents.1685586242.JP.99924.13  events.out.tfevents.1685586258.JP.99924.14  events.out.tfevents.1685586275.JP.99924.15  events.out.tfevents.1685586291.JP.99924.16  events.out.tfevents.1685586307.JP.99924.17  events.out.tfevents.1685586323.JP.99924.18  events.out.tfevents.1685586339.JP.99924.19
rl_logs/ppo_HalfCheetah-v3_sde_0/: events.out.tfevents.1685586371.JP.102795.0  events.out.tfevents.1685586391.JP.102795.1  events.out.tfevents.1685586408.JP.102795.2  events.out.tfevents.1685586426.JP.102795.3  events.out.tfevents.1685586444.JP.102795.4  events.out.tfevents.1685586463.JP.102795.5  events.out.tfevents.1685586480.JP.102795.6  events.out.tfevents.1685586498.JP.102795.7  events.out.tfevents.1685586515.JP.102795.8  events.out.tfevents.1685586533.JP.102795.9  events.out.tfevents.1685586552.JP.102795.10  events.out.tfevents.1685586570.JP.102795.11  events.out.tfevents.1685586587.JP.102795.12  events.out.tfevents.1685586605.JP.102795.13  events.out.tfevents.1685586623.JP.102795.14  events.out.tfevents.1685586641.JP.102795.15  events.out.tfevents.1685586659.JP.102795.16  events.out.tfevents.1685586677.JP.102795.17  events.out.tfevents.1685586694.JP.102795.18  events.out.tfevents.1685586712.JP.102795.19
rl_logs/sac_HalfCheetah-v3_0/: events.out.tfevents.1685586746.JP.105209.0  events.out.tfevents.1685586759.JP.105209.1  events.out.tfevents.1685586773.JP.105209.2  events.out.tfevents.1685586787.JP.105209.3  events.out.tfevents.1685586801.JP.105209.4  (+15 more)
videos/: rl-video-episode-1000.meta.json  rl-video-episode-2998.meta.json  rl-video-episode-2999.meta.json
(+126 files in other folders)
