[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "Project for the AI Center Projects in Machine Learning Research course"
authors = [
  "András Geiszl <geiszla@gmail.com>",
  "Gian Hess <gihess@student.ethz.ch>",
  "Yunxiang Guo <yunguo@student.ethz.ch>",
  "Yves Bicker <bickery@student.ethz.ch>",
]
license = "UNLICENSED"
readme = "README.md"
repository = "https://github.com/xiaoxiaoshikui/Machine-Learning-Project-for-ETH-AI-Center"
packages = [{ include = "ml_project" }]

[tool.poetry.scripts]
train = "ml_project.rl.train_rl_agent:main"
generate = "ml_project.rl.generate_videos_and_transitions:main"
create_dataset = "ml_project.reward_model.create_preference_dataset:main"
generate_reward = "ml_project.rl.generate_reward_data:main"
pretrain_reward = "ml_project.reward_model.pretrain_reward_model:main"
finetune_reward = "ml_project.reward_model.finetune_reward_model:main"

[tool.poetry.dependencies]
python = "~3.10"
flask = "^2.3.2"
numpy = "^1.24.3"
tensorboard = "^2.13"
# Exact versions are required for gym==0.21 (stable-baselines3 dependency)
mujoco = "2.2"
mujoco_py = "<2.2,>=2.1"
imageio = ">=2.14.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
conda-lock = "^1.4.0"
pre-commit = "^3.3.1"
pydocstyle = "^6.3.0"
pylint = "^2.17.3"
pyright = "^1.1.306"
ruff = "^0.0.264"
# Need to fix this, otherwise Poetry upgrades it and breaks itself
urllib3 = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"

include = ["ml_project"]
exclude = ["**/__pycache__"]

typeCheckingMode = "basic"

useLibraryCodeForTypes = true
stubPath = "python-type-stubs"

[tool.pylint.TYPECHECK]
generated-members = "torch.*"

[tool.pylint.MAIN]
disable = "duplicate-code,too-many-arguments,too-many-locals"
